# dlldr

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindCXXFS.cmake
example/: CMakeLists.txt  ld-local.cpp  module-a.cpp
include/: dlldr.hpp
src/: CMakeLists.txt  dlldr-dlopen.cpp  dlldr-w32.cpp  dlldr.cpp
